--- a/ledgerwallet.opam
+++ b/ledgerwallet.opam
@@ -12,10 +12,10 @@ available: [
   ocaml-version >= "4.02.0"
 ]
 
-build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]
-build-test: [ "jbuilder" "runtest" "-p" name "-j" jobs ]
+build: [ "dune" "build" "-p" name "-j" jobs ]
+build-test: [ "dune" "runtest" "-p" name "-j" jobs ]
 depends: [
-  "jbuilder" {build & >= "1.0+beta16"}
+  "dune" {build & >= "1.0"}
   "result" {>= "1.3"}
   "cstruct" {>= "3.2.1"}
   "hidapi" {>= "1.0"}
