--- a/src/dune
+++ b/src/dune
@@ -2,6 +2,7 @@
  (name        ledgerwallet)
  (public_name ledgerwallet)
  (modules     Apdu Transport)
+ (preprocess (pps ppx_sexp_conv))
  (synopsis "Ledger wallet library for OCaml: common parts")
  (libraries result cstruct hidapi))
 
@@ -12,12 +13,13 @@
  (preprocess (pps ppx_sexp_conv))
  (synopsis "Ledger wallet library for OCaml: BTC app")
  (flags -w -37)
- (libraries ledgerwallet bitcoin))
+ (libraries ledgerwallet cstruct-sexp bitcoin))
 
 (library
  (name        ledgerwallet_ssh_agent)
  (public_name ledgerwallet-ssh-agent)
  (modules     Ledgerwallet_ssh_agent)
+ (preprocess (pps ppx_sexp_conv))
  (synopsis "Ledger wallet library for OCaml: SSH agent app")
  (flags -w -37)
  (libraries ledgerwallet))
@@ -26,5 +28,6 @@
  (name        ledgerwallet_tezos)
  (public_name ledgerwallet-tezos)
  (modules     Ledgerwallet_tezos)
+ (preprocess (pps ppx_sexp_conv))
  (synopsis "Ledger wallet library for OCaml: Tezos app")
  (libraries ledgerwallet))
