--- a/ledgerwallet.opam
+++ b/ledgerwallet.opam
@@ -16,7 +16,7 @@ build: [ "dune" "build" "-p" name "-j" jobs ]
 build-test: [ "dune" "runtest" "-p" name "-j" jobs ]
 depends: [
   "dune" {build & >= "1.0"}
-  "result" {>= "1.3"}
+  "rresult" {>= "0.5.0"}
   "cstruct" {>= "3.2.1"}
   "hidapi" {>= "1.0"}
 ]
