--- a/src/dune
+++ b/src/dune
@@ -3,7 +3,7 @@
  (public_name ledgerwallet)
  (modules     Apdu Transport)
  (synopsis "Ledger wallet library for OCaml: common parts")
- (libraries result cstruct hidapi))
+ (libraries rresult cstruct hidapi))
 
 (library
  (name        ledgerwallet_btc)
