--- a/ledgerwallet-tezos.opam
+++ b/ledgerwallet-tezos.opam
@@ -1,20 +1,19 @@
-opam-version: "1.2"
+opam-version: "2.0"
 name: "ledgerwallet-tezos"
 version: "dev"
 authors: "Vincent Bernardoff <vb@luminar.eu.org>"
 maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
 license: "ISC"
+synopsis: "Ledger wallet library for OCaml: Tezos app"
 homepage: "https://github.com/vbmithr/ocaml-ledger-wallet"
 bug-reports: "https://github.com/vbmithr/ocaml-ledger-wallet/issues"
 dev-repo: "git://github.com/vbmithr/ocaml-ledger-wallet"
 
-available: [
-  ocaml-version >= "4.02.0"
+build: [
+  [ "dune" "build" "-p" name "-j" jobs ]
+  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
 ]
-
-build: [ "dune" "build" "-p" name "-j" jobs ]
-build-test: [ "dune" "runtest" "-p" name "-j" jobs ]
 depends: [
-  "dune" {build & >= "1.0"}
-  "ledgerwallet" {= "dev"}
+  "dune" {>= "1.7"}
+  "ledgerwallet" {= version}
 ]
