--- a/ledgerwallet.opam
+++ b/ledgerwallet.opam
@@ -1,22 +1,21 @@
-opam-version: "1.2"
+opam-version: "2.0"
 name: "ledgerwallet"
 version: "dev"
 authors: "Vincent Bernardoff <vb@luminar.eu.org>"
 maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
 license: "ISC"
+synopsis: "Ledger wallet library for OCaml"
 homepage: "https://github.com/vbmithr/ocaml-ledger-wallet"
 bug-reports: "https://github.com/vbmithr/ocaml-ledger-wallet/issues"
 dev-repo: "git://github.com/vbmithr/ocaml-ledger-wallet"
 
-available: [
-  ocaml-version >= "4.02.0"
+build: [
+  [ "dune" "build" "-p" name "-j" jobs ]
+  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
 ]
-
-build: [ "dune" "build" "-p" name "-j" jobs ]
-build-test: [ "dune" "runtest" "-p" name "-j" jobs ]
 depends: [
-  "dune" {build & >= "1.0"}
+  "dune" {>= "1.7"}
   "rresult" {>= "0.5.0"}
   "cstruct" {>= "3.2.1"}
-  "hidapi" {>= "1.0"}
+  "hidapi" {>= "1.0.1"}
 ]
