--- a/ledgerwallet-btc.opam
+++ b/ledgerwallet-btc.opam
@@ -1,20 +1,16 @@
 opam-version: "2.0"
-version: "dev"
 name: "ledgerwallet-btc"
 authors: "Vincent Bernardoff <vb@luminar.eu.org>"
 maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
 license: "ISC"
-synopsis: "Ledger wallet library for OCaml: Bitcoin app"
 homepage: "https://github.com/vbmithr/ocaml-ledger-wallet"
 bug-reports: "https://github.com/vbmithr/ocaml-ledger-wallet/issues"
 dev-repo: "git://github.com/vbmithr/ocaml-ledger-wallet"
-
-build: [
-  [ "dune" "build" "-p" name "-j" jobs ]
-  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
-]
+build:    [ "dune" "build"   "-p" name "-j" jobs ]
+# run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
 depends: [
-  "dune" {>= "1.7"}
-  "bitcoin"
-  "ledgerwallet" {= version}
+  "dune" {>= "2.4.0"}
+  "bitcoin" {>= "2.0"}
+  "ledgerwallet"
 ]
+synopsis: "Ledger wallet library for OCaml: Bitcoin app"
