--- a/ledgerwallet.opam
+++ b/ledgerwallet.opam
@@ -1,21 +1,17 @@
 opam-version: "2.0"
 name: "ledgerwallet"
-version: "dev"
 authors: "Vincent Bernardoff <vb@luminar.eu.org>"
 maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
 license: "ISC"
-synopsis: "Ledger wallet library for OCaml"
 homepage: "https://github.com/vbmithr/ocaml-ledger-wallet"
 bug-reports: "https://github.com/vbmithr/ocaml-ledger-wallet/issues"
 dev-repo: "git://github.com/vbmithr/ocaml-ledger-wallet"
-
-build: [
-  [ "dune" "build" "-p" name "-j" jobs ]
-  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
-]
+build:    [ "dune" "build"   "-p" name "-j" jobs ]
+# run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
 depends: [
-  "dune" {>= "1.7"}
-  "rresult" {>= "0.5.0"}
-  "cstruct" {>= "3.2.1"}
-  "hidapi" {>= "1.0.1"}
+  "dune" {>= "2.4.0"}
+  "rresult" {>= "0.6.0"}
+  "cstruct" {>= "5.1.1"}
+  "hidapi" {>= "1.1.1"}
 ]
+synopsis: "Ledger wallet library for OCaml"
