--- a/test/dune
+++ b/test/dune
@@ -1,19 +1,19 @@
-(executable
+(test
  (name test_btc)
  (modules Test_btc)
  (libraries alcotest ledgerwallet-btc))
 
-(executable
+(test
   (name test_tezos)
   (modules Test_tezos)
   (libraries hex alcotest ledgerwallet-tezos tweetnacl uecc))
 
-(executable
+(test
  (name test_zil)
  (modules Test_zil)
  (libraries hex alcotest ledgerwallet-zil))
 
-(executable
+(test
   (name test_ssh_agent)
   (modules Test_ssh_agent)
   (libraries hex alcotest ledgerwallet-ssh-agent))
