--- a/ledgerwallet-btc.opam
+++ b/ledgerwallet-btc.opam
@@ -5,12 +5,19 @@ maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
 license: "ISC"
 homepage: "https://github.com/vbmithr/ocaml-ledger-wallet"
 bug-reports: "https://github.com/vbmithr/ocaml-ledger-wallet/issues"
-dev-repo: "git://github.com/vbmithr/ocaml-ledger-wallet"
+dev-repo: "git+https://github.com/vbmithr/ocaml-ledger-wallet"
+doc: "https://vbmithr.github.io/ocaml-ledger-wallet/doc"
 build:    [ "dune" "build"   "-p" name "-j" jobs ]
 # run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
 depends: [
   "dune" {>= "2.4.0"}
-  "bitcoin" {>= "2.0"}
+  "ppx-sexp-conv" {>= "v0.13.0"}
+  "bitcoin"
   "ledgerwallet"
 ]
+pin-depends: [
+  ["bitcoin.dev" "git+https://github.com/vbmithr/ocaml-bitcoin.git"]
+]
 synopsis: "Ledger wallet library for OCaml: Bitcoin app"
+description:"""
+"""
