--- a/ledgerwallet-zil.opam
+++ b/ledgerwallet-zil.opam
@@ -5,7 +5,8 @@ maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
 license: "ISC"
 homepage: "https://github.com/vbmithr/ocaml-ledger-wallet"
 bug-reports: "https://github.com/vbmithr/ocaml-ledger-wallet/issues"
-dev-repo: "git://github.com/vbmithr/ocaml-ledger-wallet"
+dev-repo: "git+https://github.com/vbmithr/ocaml-ledger-wallet"
+doc: "https://vbmithr.github.io/ocaml-ledger-wallet/doc"
 build:   [ "dune" "build"   "-p" name "-j" jobs ]
 # run-test:[ "dune" "runtest" "-p" name "-j" jobs ]
 depends: [
@@ -18,3 +19,5 @@ pin-depends: [
   ["bech32.dev" "git+https://github.com/vbmithr/ocaml-bech32.git"]
 ]
 synopsis: "Ledger wallet library for OCaml: Zilliqa app"
+description:"""
+"""
