--- a/ledgerwallet.opam
+++ b/ledgerwallet.opam
@@ -5,7 +5,8 @@ maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
 license: "ISC"
 homepage: "https://github.com/vbmithr/ocaml-ledger-wallet"
 bug-reports: "https://github.com/vbmithr/ocaml-ledger-wallet/issues"
-dev-repo: "git://github.com/vbmithr/ocaml-ledger-wallet"
+dev-repo: "git+https://github.com/vbmithr/ocaml-ledger-wallet"
+doc: "https://vbmithr.github.io/ocaml-ledger-wallet/doc"
 build:    [ "dune" "build"   "-p" name "-j" jobs ]
 # run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
 depends: [
@@ -15,3 +16,5 @@ depends: [
   "hidapi" {>= "1.1.1"}
 ]
 synopsis: "Ledger wallet library for OCaml"
+description: """Library to communicate with Ledger hardware wallets
+"""
