--- a/ledgerwallet-btc.opam
+++ b/ledgerwallet-btc.opam
@@ -11,7 +11,7 @@ build:    [ "dune" "build"   "-p" name "-j" jobs ]
 # run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
 depends: [
   "dune" {>= "2.4.0"}
-  "ppx-sexp-conv" {>= "v0.13.0"}
+  "ppx_sexp_conv" {>= "v0.13.0"}
   "bitcoin"
   "ledgerwallet"
 ]
