--- a/ledgerwallet-zil.opam
+++ b/ledgerwallet-zil.opam
@@ -10,6 +10,7 @@ doc: "https://vbmithr.github.io/ocaml-ledger-wallet/doc"
 build:   [ "dune" "build"   "-p" name "-j" jobs ]
 # run-test:[ "dune" "runtest" "-p" name "-j" jobs ]
 depends: [
+  "ocaml" {>= "4.08.0"}
   "dune" {>= "2.4.0"}
   "hex" {>= "1.4.0"}
   "bech32"
