--- a/ledgerwallet.opam
+++ b/ledgerwallet.opam
@@ -10,6 +10,7 @@ doc: "https://vbmithr.github.io/ocaml-ledger-wallet/doc"
 build:    [ "dune" "build"   "-p" name "-j" jobs ]
 # run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
 depends: [
+  "ocaml" {>= "4.08.0"}
   "dune" {>= "2.4.0"}
   "rresult" {>= "0.6.0"}
   "cstruct" {>= "5.1.1"}
