--- a/ledgerwallet-zil.opam
+++ b/ledgerwallet-zil.opam
@@ -15,6 +15,7 @@ depends: [
   "hex" {>= "1.4.0"}
   "bech32"
   "ledgerwallet"
+  "alcotest" { with-test }
 ]
 pin-depends: [
   ["bech32.dev" "git+https://github.com/vbmithr/ocaml-bech32.git"]
