--- a/ledgerwallet-btc.opam
+++ b/ledgerwallet-btc.opam
@@ -14,6 +14,7 @@ depends: [
   "ppx_sexp_conv" {>= "v0.13.0"}
   "bitcoin"
   "ledgerwallet"
+  "alcotest" { with-test }
 ]
 pin-depends: [
   ["bitcoin.dev" "git+https://github.com/vbmithr/ocaml-bitcoin.git"]
