--- a/ledgerwallet-ssh-agent.opam
+++ b/ledgerwallet-ssh-agent.opam
@@ -13,6 +13,8 @@ depends: [
   "ocaml" {>= "4.08.0"}
   "dune" {>= "2.4.0"}
   "ledgerwallet"
+  "hex" { with-test }
+  "alcotest" { with-test }
 ]
 synopsis: "Ledger wallet library for OCaml: SSH agent app"
 description: """
