--- a/ledgerwallet-tezos.opam
+++ b/ledgerwallet-tezos.opam
@@ -13,6 +13,10 @@ depends: [
   "ocaml" {>= "4.08.0"}
   "dune" {>= "2.4.0"}
   "ledgerwallet"
+  "uecc" { with-test }
+  "hex" { with-test }
+  "secp256k1" { with-test }
+  "alcotest" { with-test }
 ]
 synopsis: "Ledger wallet library for OCaml: Tezos app"
 description:"""
