action do not call depext with-test

--- a/ledgerwallet-tezos.opam
+++ b/ledgerwallet-tezos.opam
@@ -15,7 +15,7 @@ depends: [
   "ledgerwallet"
   "uecc" { with-test }
   "hex" { with-test }
-  "secp256k1" { with-test }
+  "secp256k1" # { with-test } # commented because github actions does not install external deps for test only deps
   "alcotest" { with-test }
 ]
 synopsis: "Ledger wallet library for OCaml: Tezos app"
